--- a/mvid-lg-promo/css/style.css
+++ b/mvid-lg-promo/css/style.css
@@ -1,37 +1,10 @@
-@font-face {
-  font-family: 'lg_smartregular';
-  src: url("../fonts/LGSmartRegular__W.eot");
-  src: url("../fonts/LGSmartRegular__W.eot?#FooAnything") format("embedded-opentype"), url("../fonts/LGSmartRegular__W.woff") format("woff"), url("../fonts/LGSmartRegular__W.ttf") format("truetype"), url("../fonts/LGSmartRegular__W.svg#LGFontRegular") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'lg_smartlight';
-  src: url("../fonts/LGSmartLight__W.eot");
-  src: url("../fonts/LGSmartLight__W.eot?#FooAnything") format("embedded-opentype"), url("../fonts/LGSmartLight__W.woff") format("woff"), url("../fonts/LGSmartLight__W.ttf") format("truetype"), url("../fonts/LGSmartLight__W.svg#LGFontLight") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'lg_smartsemibold';
-  src: url("../fonts/LGSmartSemiBold__W.eot");
-  src: url("../fonts/LGSmartSemiBold__W.eot?#FooAnything") format("embedded-opentype"), url("../fonts/LGSmartSemiBold__W.woff") format("woff"), url("../fonts/LGSmartSemiBold__W.ttf") format("truetype"), url("../fonts/LGSmartSemiBold__W.svg#LGFontMedium") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-
-@font-face {
-  font-family: 'lg_smartbold';
-  src: url("../fonts/LGSmartBold__W.eot");
-  src: url("../fonts/LGSmartBold__W.eot?#FooAnything") format("embedded-opentype"), url("../fonts/LGSmartBold__W.woff") format("woff"), url("../fonts/LGSmartBold__W.ttf") format("truetype"), url("../fonts/LGSmartBold__W.svg#LGFontMedium") format("svg");
-  font-weight: normal;
-  font-style: normal; }
 
 * {
   padding: 0;
   margin: 0;
   border: none;
   box-sizing: border-box;
-  font-family: lg_smartlight; }
+  font-family: Roboto; }
 
 body {
   background-color: #fff;
@@ -39,7 +12,7 @@ body {
   padding: 0; }
 
 body {
-  font-family: lg_smartlight,sans-serif;
+  font-family: Roboto,sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333; }
