--- a/mvid-lg-promo/css/style.css
+++ b/mvid-lg-promo/css/style.css
@@ -347,7 +347,7 @@ img.img-anim-gif4-r {
   display: inline-block;
   border-radius: 6px;
   background-color: #a50034;
-  font-family: "LG Smart",Tahoma,Arial,sans-serif;
+  font-family: "Arial,sans-serif;
   font-weight: 400;
   line-height: normal;
   color: #fff;
